--- a/config/database.yml
+++ b/config/database.yml
@@ -12,7 +12,7 @@ development:
   adapter: mysql2
   encoding: utf8
   reconnect: false
-  database: fourth_app_development
+  database: proseat
   pool: 5
   username: root
   password:
